# votracker

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: FeatureExtraction.h  TrackRegion.h  VOTDraw.h  VOTKeyPoint.h  VOTools.h  VOTools.h~  sys_lib.h  votracker_lib.h
lib/: libvotrackerlib.dylib
resources/: images.txt  imagesUbuntu.txt  region.txt
src/: votdrawboxtest.cpp  vothaartest.cpp  votrackermain.cpp  votrackernew.cpp
